fixing scoring bug and changing the style

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 <h1>Triva of Thrones</h1>
  	<div id="score"></div>
+ 	<div id="score" class="scoreBoard"></div>
+	<div id="timer" class="scoreBoard"></div>
 	<section id="question">
 	</section>
 	<section id="choices">
@@ -22,7 +24,6 @@
 		</ol>
 		<div id="result"></div>
 	</section>
-	<section id="timer"></section>
 	<script type="text/javascript" src="assets/javascript/questions-library.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
