changing style and finalizing the issue with scoring

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <!DOCTYPE html>
  <html>
  <head>
+ 	<link href="https://fonts.googleapis.com/css?family=Proza+Libre|Tangerine" rel="stylesheet">
  	<title>Game of Thrones Trivia Game</title>
  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
  	<script
