add question images and responsive styles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
  	<div id="score" class="scoreBoard"></div>
 	<div id="timer" class="scoreBoard"></div>
 	<section id="question">
+		<div class="sectionBG"></div>
+		<div id="qText"></div>
 	</section>
 	<section id="choices">
+		<div class="sectionBG"></div>
 		<ol>
 		<li class="answer" data-choice=0></li>
 		<li class="answer" data-choice=1></li>
