finalizing the game and adding the rest of images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <h1>Triva of Thrones</h1>
  	<div id="score"></div>
- 	<div id="score" class="scoreBoard"></div>
-	<div id="timer" class="scoreBoard"></div>
+ 	<div id="score" class="scoreboard"></div>
+	<div id="timer" class="scoreboard"></div>
 	<section id="question">
 		<div class="sectionBG"></div>
 		<div id="qText"></div>
