finalizing the game v2

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
- <!DOCTYPE html>
- <html>
- <head>
- 	<link href="https://fonts.googleapis.com/css?family=Proza+Libre|Tangerine" rel="stylesheet">
- 	<title>Game of Thrones Trivia Game</title>
- 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
- 	<script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Game of Thrones Trivia Game</title>
+	<link href="https://fonts.googleapis.com/css?family=Proza+Libre|Tangerine" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script type="text/javascript" src="assets/javascript/jquery-3.1.1.min.js"></script>
 </head>
 <body>
 <h1>Triva of Thrones</h1>
- 	<div id="score"></div>
- 	<div id="score" class="scoreboard"></div>
+	<div id="score" class="scoreboard"></div>
 	<div id="timer" class="scoreboard"></div>
 	<section id="question">
 		<div class="sectionBG"></div>
@@ -31,4 +27,4 @@
 	<script type="text/javascript" src="assets/javascript/questions-library.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
- </html>
+</html>
